--- a/requirements.txt
+++ b/requirements.txt
@@ -16,7 +16,7 @@ alembic==1.13.1
 dashscope==1.14.1
 openai==1.3.7
 langchain==0.0.350
-langchain-community==0.0.1
+langchain-community>=0.0.2
 
 # 数据处理和工具
 pandas==2.1.4
